[package]
name = "unit-rs"
description = "A safe wrapper around Nginx Unit's libunit."
authors = ["Andrei Vasiliu <whyte.vuhuni@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/andreivasiliu/unit-rs"
readme = "README.md"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.126"

[build-dependencies]
bindgen = "0.60.1"
